--- a/esercizio1.html
+++ b/esercizio1.html
@@ -36,9 +36,9 @@
 
 
     <div class="container">
-        <div class="row">
+        <div class="row ">
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/020_The_lion_king_Snyggve_in_the_Serengeti_National_Park_Photo_by_Giles_Laurent.jpg" class="card-img-top" alt="Image of Lion">
                     <div class="card-body">
@@ -49,7 +49,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/6aofsvaglm_Medium_WW226365.jpg" class="card-img-top" alt="Image of a Tiger">
                     <div class="card-body">
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/Eurasian_wolf_2.jpg" class="card-img-top" alt="Image of a Wolf">
                     <div class="card-body">
