--- a/esercizio2.html
+++ b/esercizio2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container-fluid bg-primary text-white p-5 text-center mb-5">
-        <h1 class="display-2 fw-bold text-body-emphasis">Hero!</h1>
+        <h1 class="display-2 fw-bold text-white-emphasis">Hero!</h1>
         <div class="col-lg-6 mx-auto">
             <h3 class="lead mb-4 text-light fw-light">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</h3>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div class="container-flud px-5">
+    <div class="container-fluid px-5">
         <div class="row">
             <div class="col-4">
                 <h4><i class="bi bi-check-circle text-success"></i> Nvidia</h4>
@@ -29,13 +29,40 @@
                 <h4><i class="bi bi-check-circle text-success"></i> Amd</h4>
                 <p class="text-muted">Advanced Micro Devices è una multinazionale statunitense produttrice di semiconduttori con sede a Sunnyvale, in California.</p>
             </div>
-            <div class="col-4"> 
+            <div class="col-4">
                 <h4><i class="bi bi-check-circle text-success"></i> Intel</h4>
                 <p class="text-muted">Intel Corporation è un'azienda multinazionale statunitense fondata il 18 luglio 1968 con sede a Santa Clara.</p>
             </div>
         </div>
     </div>
-    
+
+
+    <form class="container-fluid mt-4 px-5">
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="exampleName" aria-describedby="nameHelp">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3">
+            <label for="userComment" class="form-label">Il tuo messaggio</label>
+            <textarea class="form-control" id="userComment" rows="3" placeholder="Scrivi il tuo messaggio qui..."></textarea>
+        </div>
+        <button type="submit" class="btn btn-success btn-lg">Submit</button>
+    </form>
+
+
+    <footer class="bg-dark footer fixed-bottom py-3 text-white">
+        <div class="container text-center">
+            <a class="text-white me-3" href="#"><i class="bi bi-facebook"></i></a>
+            <a class="text-white me-3" href="#"><i class="bi bi-twitter"></i></i></a>
+            <a class="text-white me-3" href="#"><i class="bi bi-instagram"></i></a>
+        </div>
+    </footer>
+
+
     <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
