--- a/esercizio3.html
+++ b/esercizio3.html
@@ -6,10 +6,100 @@
     <title>Bs5</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+    <div class="container-fluid px-0">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid d-flex justify-content-center">
+                <a class="navbar-brand" href="#">
+                    <i class="bi bi-github fs-3"></i>
+                </a>
+            </div>
+        </nav>
+    </div>
+
+    <div class="container-fluid px-5 mt-5">
+        <div class="row">
+            <div class="col-md-4">
+                <button type="button" class="border-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+                    <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?w=600" class="img-thumbnail" alt="...">
+                </button>
+            </div>
+
+            <div class="col-md-4">
+                <button type="button" class="border-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                    <img src="https://images.unsplash.com/photo-1555421689-d68471e189f2?w=600" class="img-thumbnail" alt="...">
+                </button>
+            </div>
+
+            <div class="col-md-4">
+                <button type="button" class="border-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=600" class="img-thumbnail" alt="..." width="93.5%">
+                </button>
+            </div>
+        </div>
+    </div>   
     
+
+    <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Tasks</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?w=600" alt="" width="100%">
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Meeting</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    <img src="https://images.unsplash.com/photo-1555421689-d68471e189f2?w=600" alt="" width="100%">
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Office</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=600" alt="" width="100%">
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     
+    <footer class="bg-dark footer fixed-bottom py-3 text-white">
+        <div class="container text-center">
+            <a class="text-white me-3" href="#"><i class="bi bi-facebook"></i></a>
+            <a class="text-white me-3" href="#"><i class="bi bi-twitter"></i></i></a>
+            <a class="text-white me-3" href="#"><i class="bi bi-instagram"></i></a>
+        </div>
+    </footer>
+
+
     <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
