--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container-fluid">
-        <button type="button" class="btn btn-primary">
-            <a href="./esercizio1.html" target="_blank"></a>ES1
-        </button>
-        <button type="button" class="btn btn-primary">
-            <a href="./esercizio2.html" target="_blank"></a>ES2
-        </button>
-        <button type="button" class="btn btn-primary">
-            <a href="./esercizio3.html" target="_blank"></a>ES3
-        </button>
+    <div class="container-fluid p-4">
+        <div class="d-flex gap-3 justify-content-center">
+            <a href="./esercizio1.html" class="btn btn-primary" target="_blank">
+                Esercizio 1
+            </a>
+            <a href="./esercizio2.html" class="btn btn-primary" target="_blank">
+                Esercizio 2
+            </a>
+            <a href="./esercizio3.html" class="btn btn-primary" target="_blank">
+                Esercizio 3
+            </a>
+        </div>
     </div>
     
     <script src="./script.js"></script>
