--- a/esercizio2.html
+++ b/esercizio2.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body style="padding-bottom: 400px;">
     <div class="container-fluid bg-primary text-white p-5 text-center mb-5">
         <h1 class="display-2 fw-bold text-white-emphasis">Hero!</h1>
         <div class="col-lg-6 mx-auto">
@@ -37,7 +37,7 @@
     </div>
 
 
-    <form class="container-fluid mt-4 px-5">
+    <form class="container-fluid mt-2 px-5">
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Nome</label>
             <input type="text" class="form-control" id="exampleName" aria-describedby="nameHelp">
