--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="container-fluid p-4">
         <div class="d-flex gap-3 justify-content-center">
-            <a href="./esercizio1.html" class="btn btn-primary" target="_blank">
+            <a href="esercizio1.html" class="btn btn-primary" target="_blank">
                 Esercizio 1
             </a>
-            <a href="./esercizio2.html" class="btn btn-primary" target="_blank">
+            <a href="esercizio2.html" class="btn btn-primary" target="_blank">
                 Esercizio 2
             </a>
-            <a href="./esercizio3.html" class="btn btn-primary" target="_blank">
+            <a href="esercizio3.html" class="btn btn-primary" target="_blank">
                 Esercizio 3
             </a>
         </div>
